<resources>
    <string name="app_name">MeatYou</string>
    <string name="logo">MeatYou Logo</string>
    <string name="slogan">No matter where you are : whether you are at home, or in the office,or on the beach - we will find you and we will Meat-You</string>
    <string name="singUpBtn">Sing Up</string>
    <string name="loginBtn">I   Want   Meat</string>
    <string name="title_activity_home">Home</string>
    <string name="menu_order">Order</string>
    <string name="food_menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="enterName">Please Enter your name</string>
    <string name="enterAddress">Please Enter your address</string>
    <string name="enterPhone">Please Enter your phone number</string>
    <string name="loginSuccess">Congratulation! , Login success</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_you_orders">YOUR ORDERS</string>
    <string name="menu_about_us">About Us</string>
    <string name="homeTxt">Choose Your Meat</string>
    <string name="login">Login</string>


    //order

    <string name="withSpread">Spreads</string>
    <string name="noSpread">Without Spreads</string>
    <string name="salsa">Salsa</string>
    <string name="avocado">Avocado</string>
    <string name="chimichurri">Chimichurri</string>
    <string name="mayonnaise">Mayonnaise</string>
    <string name="tehina">Tehina</string>
    <string name="hotSauce">hotSauce</string>
    <string name="withSalad">Salads</string>
    <string name="noSalad">Without Salads</string>
    <string name="salad">Regular Salad</string>
    <string name="arabSalad">Arab Salad</string>
    <string name="cabbage">cabbage</string>
    <string name="Fries">Fries</string>
    <string name="onionRings">Onion rings</string>
    <string name="rice">Rice</string>
    <string name="extras">Every extras will be charge of 13NIS</string>
    <string name="sauceChoice">you have 5 sauces on us, every extra will charge 1NIS</string>
    <string name="language">en</string>
    <string name="english_lang">ENGLISH</string>
    <string name="hebrew_lang">HEBREW</string>
    <string name="steak">Steak</string>
    <string name="steakChoose">Steak - Price (300gr) : 79NIS</string>
    <string name="mince">Mince</string>
    <string name="minceChoose">Mince - Price (250gr) : 55NIS</string>
    <string name="lamb">Lamb</string>
    <string name="lambChoose">Lamb chops - Price (300gr) : 79NIS</string>
    <string name="number_of_sauces">Number of sauces</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="order_btn">Order</string>
    <string name="chooseSaucesNum">Choose</string>
    <string name="menuOrder">Order</string>
    <string name="welcome">Welcome</string>
    <string name="ketchup">ketchup</string>
    <string name="chili">Sweet chili</string>
    <string name="no_salads">none</string>
    <string name="no_spread">none</string>
    <string name="no_extras">none</string>
    <string name="totalPrice">TOTAL PRICE : </string>
    <string name="finishOrder">Thank you for ordering, your order detail is \"MY ORDERS\" on menu, Delivery on the way</string>
    <string name="MyOrder">Thank You</string>
    <string name="thanks_for_ordering_meatyou">Thanks for ordering MeatYou</string>
    <string name="final_name">Your name :</string>
    <string name="final_phone_number">Your phone number :</string>
    <string name="final_address">Your address for delivery :</string>
    <string name="final_order_information">Your order details</string>
    <string name="final_typeOfFood">type of food :</string>
    <string name="final_delivery_information">Your delivery information</string>
    <string name="final_spreads">inside spreads :</string>
    <string name="final_salads">inside salads :</string>
    <string name="final_extras">beside extras :</string>
    <string name="final_number_sauces">Sauces bags</string>
    <string name="final_price">The total price is :</string>




    <string name="none_ordering_meatyou">You didnt order yet,\n please go order</string>
    <string name="myname">Gal Tager</string>
    <string name="meat_you_app">Meat-You App</string>
    <string name="about_me">Android Developer | Android App, Game, Web and Software Developer.</string>
    <string name="app_description">Meat-You is an food delivery APP which follow you every where.\n\n</string>
    <string name="app_description2">This app uses material design and more packages. Every icon is handcrafted with attention to the smallest details!\n\n</string>
    <string name="app_description3">The APP slogan is :\n\n </string>
    <string name="final_drinks">Drink :</string>
    <string name="choose_drink">Choose Drink</string>
    <string-array name="drinkChoose">
        <item>none</item>
        <item>Cola-Zero</item>
        <item>Water</item>
        <item>Soda</item>
    </string-array>
    <string name="none">none</string>


</resources>